[tool.poetry]
name = "test_semantic_release"
version = "0.1.0"
description = "testing semantic release"
authors = ["guiferviz <guiferviz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
