[tool.poetry]
name = "test_semantic_release"
version = "0.1.0"
description = "testing semantic release"
authors = ["guiferviz <guiferviz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
python-semantic-release = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = false
build_command = "poetry build"
